...
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/locationEditText"
        android:background="@color/colorTextIcons"
        android:padding="5dp"
        android:hint="Enter Zip Code"
        android:textColor="@color/colorAccent"
        android:layout_marginBottom="16dp"
        android:layout_above="@+id/savedStudioButton"
...
        android:layout_height="wrap_content"
        android:text="My Saved Studio"
        android:id="@+id/savedStudioButton"
        android:background="@color/colorAccent"
        android:textColor="@color/colorTextIcons"
        android:visibility="visible"
        android:layout_above="@+id/findStudioButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Find Studios"
...
